fix: nav link was not bright enough on dark mode

--- a/src/app/ui/assets/styles/scss/custom.scss
+++ b/src/app/ui/assets/styles/scss/custom.scss
@@ -79,6 +79,10 @@
       border-bottom-color: rgb(56, 61, 63) !important;
     }
 
+    .nav-pills .nav-link {
+      color: rgb(209, 205, 199) !important;
+    }
+
     .text-dark {
       color: rgb(209, 205, 199) !important;
     }
